Overflow issue
Fix

--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,10 @@
 		text-align: center;
 	}
 
+	.artbox img{
+		max-width: 100%
+	}
+
 /* Images */
 	#logo img {
 		width: 50px;
